# strawberry-sample-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  run.sh
config/gunicorn/dev/: config.py
config/gunicorn/local/: config.py
dockerfiles/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
scripts/start/: dev.sh  local.sh  prod.sh
src/: asgi.py  urls.py  wsgi.py
src/apps/auth_service/: apps.py
src/apps/auth_service/graphql/exceptions/: __init__.py  token_expired.py  user_is_not_verified.py
src/apps/auth_service/graphql/inputs/: __init__.py  login.py  register.py  verify_user.py
src/apps/auth_service/graphql/mutations/: __init__.py  delete_refresh_token.py  login.py  refresh_token.py  register.py  verify_user.py
src/apps/auth_service/graphql/payloads/: __init__.py  delete_refresh_token.py  login.py  refresh_token.py  register.py  verify_user.py
src/apps/auth_service/graphql/types/: __init__.py  auth_token.py  refresh_token.py
src/apps/auth_service/graphql/utils/: __init__.py  jwt_decode_and_is_expired.py
src/apps/auth_service/migrations/: 0001_initial.py
src/apps/auth_service/models/: __init__.py
src/apps/auth_service/models/db/: __init__.py  refresh_token.py
src/apps/auth_service/models/pydantic/: __init__.py  auth_token.py
src/apps/auth_service/utils/: __init__.py  constants.py  keys.py
src/apps/product/graphql/filters/: __init__.py  brand.py  product.py
src/apps/product/graphql/mutations/: __init__.py  generic.py
src/apps/product/graphql/orders/: __init__.py  brand.py  product.py
src/apps/product/graphql/queries/: __init__.py  custom_connection.py  generic.py
src/apps/product/graphql/types/: __init__.py  brand.py  product.py  product_image.py
src/apps/product/management/commands/: dummy_product_data.py
src/apps/product/migrations/: 0001_initial.py
src/apps/product/models/: __init__.py  brand.py  product.py  product_image.py
src/apps/shared/models/: __init__.py  base_model.py
src/apps/shared/utils/: __init__.py  uuid_encoder.py
src/apps/user/choices/: __init__.py  user_role.py
src/apps/user/graphql/mutations/: __init__.py  generic.py
src/apps/user/graphql/queries/: __init__.py  context_user.py  generic.py
src/apps/user/graphql/responses/: __init__.py  context_user.py
src/apps/user/graphql/subscriptions/: __init__.py  count.py
src/apps/user/graphql/types/: __init__.py  anonymous_user.py  user.py
src/apps/user/managers/: user.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/models/: __init__.py  anonymous_user.py  user.py
src/apps/user/tests/: test_context_user.py
src/graphql_core/: context.py  schema.py
src/graphql_core/extensions/: __init__.py  context_user.py
src/settings/: base.py  local.py  typecheck.py
src/settings/envs/: .local.sample
